Fix collapsable sections

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -42,6 +42,11 @@ hr {
   margin: 1.25em;
 }
 
+img {
+  padding-top: 1.25em;
+  padding-bottom: 1.25em;
+}
+
 .center {
   text-align: center;
 }
